Fix: Correction structure HTML index.html - Build fonctionne maintenant

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,4 @@
-<!DOCT    <meta
-      name="description"
-      content="🏆 Calculateurs financiers gratuits 2025 : frais de notaire, simulateur prêt immobilier, plus-value, charges copropriété. Outils officiels mis à jour."
-    />
-<meta
-  name="keywords"
-  content="calculateur gratuit, frais notaire 2025, simulateur prêt immobilier, plus-value immobilière, charges copropriété, outils financiers, barêmes officiels, simulation achat maison, crédit immobilier, calcul impôts, estimation coûts, france"
-/>>
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
@@ -16,11 +9,11 @@
     </title>
     <meta
       name="description"
-      content="🚀 Calculateurs intelligents 2025 : frais notaire, indemnités kilométriques, ponts, taxe foncière, heures sup'. Gratuit, précis, instantané ! 💡"
+      content="🏆 Calculateurs financiers gratuits 2025 : frais de notaire, simulateur prêt immobilier, plus-value, charges copropriété. Outils officiels mis à jour."
     />
     <meta
       name="keywords"
-      content="calculateur, frais notaire, indemnités kilométriques, jours fériés, taxe foncière, durée travail, 2025"
+      content="calculateur gratuit, frais notaire 2025, simulateur prêt immobilier, plus-value immobilière, charges copropriété, outils financiers, barêmes officiels, simulation achat maison, crédit immobilier, calcul impôts, estimation coûts, france"
     />
 
     <!-- Favicon -->
