Fix Vercel routing configuration and Vite build setup

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       name="keywords"
       content="calculateur gratuit, frais notaire 2025, simulateur prêt immobilier, plus-value immobilière, charges copropriété, outils financiers, barêmes officiels, simulation achat maison, crédit immobilier, calcul impôts, estimation coûts, france"
     />
+    <meta name="google-adsense-account" content="ca-pub-2209781252231399">
 
     <!-- Favicon -->
     <link
@@ -38,25 +39,40 @@
     <link rel="shortcut icon" href="./assets/favicon.ico" />
 
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2209781252231399"
-         crossorigin="anonymous"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2209781252231399"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TPFZCGX5');</script>
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-TPFZCGX5");
+    </script>
     <!-- End Google Tag Manager -->
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2HNTGCYQ1X"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-2HNTGCYQ1X"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-2HNTGCYQ1X');
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-2HNTGCYQ1X");
     </script>
 
     <!-- SEO & Social -->
@@ -149,8 +165,14 @@
   </head>
   <body class="bg-gray-50">
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TPFZCGX5"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-TPFZCGX5"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <header class="bg-white shadow-sm border-b border-gray-200">
@@ -490,51 +512,6 @@
             >Calculer</a
           >
         </div>
-
-        <!-- Card Publicitaire -->
-        <div
-          class="bg-gradient-to-br from-purple-50 to-pink-50 rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow border-2 border-dashed border-purple-200"
-        >
-          <div class="mb-4">
-            <div
-              class="w-12 h-12 bg-purple-100 rounded-lg flex items-center justify-center mb-3"
-            >
-              <svg
-                class="w-6 h-6 text-purple-600"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"
-                ></path>
-              </svg>
-            </div>
-            <h3 class="text-xl font-semibold text-gray-900">
-              🚀 Votre pub ici !
-            </h3>
-            <p class="text-gray-600 mt-2">
-              Touchez des milliers d'utilisateurs quotidiens ! Emplacement
-              premium pour vos services financiers, juridiques ou
-              professionnels.
-            </p>
-            <p class="text-xs text-purple-600 mt-1 font-medium">
-              ✨ Audience qualifiée • Trafic ciblé • ROI optimisé
-            </p>
-          </div>
-          <div class="bg-white/80 backdrop-blur-sm rounded-lg p-4 text-center">
-            <p class="text-sm text-gray-500 mb-2">
-              Espace publicitaire premium
-            </p>
-            <div class="text-xs text-gray-400">
-              Format : 300x250 • Audience : Professionnels & Particuliers
-            </div>
-            <!-- AdSense code here -->
-          </div>
-        </div>
       </section>
 
       <!-- Section calculateurs supplémentaires (cachée par défaut) -->
@@ -672,14 +649,6 @@
         >
           ➖ Afficher moins
         </button>
-      </div>
-
-      <!-- AdSense In-Feed -->
-      <div class="mb-12 text-center">
-        <div class="bg-gray-100 border border-gray-200 rounded-lg p-8">
-          <p class="text-gray-500 text-sm">Espace publicitaire</p>
-          <!-- AdSense code here -->
-        </div>
       </div>
 
       <!-- FAQ Schema.org -->
