--- a/src/pages/plusvalue.html
+++ b/src/pages/plusvalue.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="plus-value immobilière 2025, calcul impôt plus-value, abattement durée détention, exonération plus-value, taux impôt immobilier, vente maison appartement, calculateur plus-value gratuit, barèmes fiscaux, CGI, résidence principale"
+    />
+    <meta name="google-adsense-account" content="ca-pub-2209781252231399">
+
+    <!-- SEO & Social -->
     <title>
       Calculateur Plus-value Immobilière 2025 - Impôt et abattements
     </title>
