--- a/src/pages/pret.html
+++ b/src/pages/pret.html
@@ -14,6 +14,7 @@
       name="keywords"
       content="simulateur prêt immobilier gratuit, capacité emprunt 2025, calcul mensualités crédit, taux prêt immobilier, assurance emprunteur, simulation crédit maison, calculateur hypothèque, co-emprunteur, TAEG, durée prêt, apport personnel"
     />
+    <meta name="google-adsense-account" content="ca-pub-2209781252231399">
 
     <!-- SEO & Social -->
     <link rel="canonical" href="https://lescalculateurs.fr/pages/pret.html" />
