--- a/src/pages/notaire.html
+++ b/src/pages/notaire.html
@@ -12,6 +12,7 @@
       name="keywords"
       content="frais notaire 2025, calculateur frais notaire gratuit, barêmes notaire officiels, émoluments notaire, droits enregistrement, simulation achat immobilier, coût notaire maison appartement, taux notaire france, calcul frais acte, estimation frais notaire département"
     />
+    <meta name="google-adsense-account" content="ca-pub-2209781252231399">
 
     <!-- SEO & Social -->
     <link
@@ -60,25 +61,40 @@
     <link rel="shortcut icon" href="../assets/favicon.ico" />
 
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2209781252231399"
-         crossorigin="anonymous"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2209781252231399"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TPFZCGX5');</script>
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-TPFZCGX5");
+    </script>
     <!-- End Google Tag Manager -->
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2HNTGCYQ1X"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-2HNTGCYQ1X"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-2HNTGCYQ1X');
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-2HNTGCYQ1X");
     </script>
 
     <!-- Open Graph -->
@@ -103,8 +119,14 @@
   </head>
   <body class="bg-gray-50">
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TPFZCGX5"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-TPFZCGX5"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <header class="bg-white shadow-sm border-b border-gray-200">
@@ -205,14 +227,6 @@
 
       <!-- Calculateur -->
       <div id="notaire-calculator"></div>
-
-      <!-- AdSense In-Article -->
-      <div class="my-12 text-center">
-        <div class="bg-gray-100 border border-gray-200 rounded-lg p-8">
-          <p class="text-gray-500 text-sm">Espace publicitaire</p>
-          <!-- AdSense code here -->
-        </div>
-      </div>
 
       <!-- FAQ -->
       <section class="max-w-4xl mx-auto mt-12">
