Fix meta tags formatting and add ads.txt content-type headers for better Google AdSense validation

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       name="keywords"
       content="calculateur gratuit, frais notaire 2025, simulateur prêt immobilier, plus-value immobilière, charges copropriété, outils financiers, barêmes officiels, simulation achat maison, crédit immobilier, calcul impôts, estimation coûts, france"
     />
-    <meta name="google-adsense-account" content="ca-pub-2209781252231399">
+    <meta name="google-adsense-account" content="ca-pub-2209781252231399" />
 
     <!-- Favicon -->
     <link
