--- a/src/pages/charges.html
+++ b/src/pages/charges.html
@@ -12,7 +12,7 @@
       name="keywords"
       content="charges copropriété 2025, calcul charges syndic, estimation coûts copropriété, charges courantes exceptionnelles, honoraires syndic, charges par m2, budget copropriété, frais entretien immeuble, calculateur gratuit"
     />
-    <meta name="google-adsense-account" content="ca-pub-2209781252231399">
+    <meta name="google-adsense-account" content="ca-pub-2209781252231399" />
 
     <!-- SEO & Social -->
     <link
