--- a/src/pages/notaire.html
+++ b/src/pages/notaire.html
@@ -12,7 +12,7 @@
       name="keywords"
       content="frais notaire 2025, calculateur frais notaire gratuit, barêmes notaire officiels, émoluments notaire, droits enregistrement, simulation achat immobilier, coût notaire maison appartement, taux notaire france, calcul frais acte, estimation frais notaire département"
     />
-    <meta name="google-adsense-account" content="ca-pub-2209781252231399">
+    <meta name="google-adsense-account" content="ca-pub-2209781252231399" />
 
     <!-- SEO & Social -->
     <link
