Ajout du calculateur plus-value crypto & bourse - Nouveau calculateur pour crypto et actions avec fiscalité FR 2025 - Flat tax 30% et abattements durée de détention - Support Bitcoin, Ethereum, CAC 40, ETF - Interface complète avec FAQ et validation - Configuration build et sitemap mis à jour

--- a/src/index.html
+++ b/src/index.html
@@ -633,6 +633,82 @@
             Calculer
           </a>
         </div>
+
+        <!-- Calculateur financement personnel -->
+        <div
+          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow"
+        >
+          <div class="mb-4">
+            <div
+              class="w-12 h-12 bg-purple-100 rounded-lg flex items-center justify-center mb-3"
+            >
+              <svg
+                class="w-6 h-6 text-purple-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="text-xl font-semibold text-gray-900">
+              💳 Financement personnel
+            </h3>
+            <p class="text-gray-600 mt-2">
+              Voiture, travaux, équipements : calculez votre capacité de financement 
+              avec apport, mensualités et ratio d'endettement.
+            </p>
+            <p class="text-xs text-purple-600 mt-1 font-medium">
+              🆕 Nouveau ! Tous projets
+            </p>
+          </div>
+          <a href="pages/financement.html" class="inline-block calculator-button">
+            Calculer
+          </a>
+        </div>
+
+        <!-- Calculateur plus-value crypto & bourse -->
+        <div
+          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow"
+        >
+          <div class="mb-4">
+            <div
+              class="w-12 h-12 bg-orange-100 rounded-lg flex items-center justify-center mb-3"
+            >
+              <svg
+                class="w-6 h-6 text-orange-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="text-xl font-semibold text-gray-900">
+              🚀 Plus-Value Crypto & Bourse
+            </h3>
+            <p class="text-gray-600 mt-2">
+              Calculez vos gains crypto et actions après impôts. Bitcoin, Ethereum, 
+              CAC 40. Flat tax 30% et abattements selon durée de détention.
+            </p>
+            <p class="text-xs text-orange-600 mt-1 font-medium">
+              🆕 Nouveau ! Fiscalité 2025
+            </p>
+          </div>
+          <a href="pages/crypto-bourse.html" class="inline-block calculator-button">
+            Calculer
+          </a>
+        </div>
       </section>
 
       <!-- Bouton Afficher plus -->
