feat: TOP 5 SEO homepage + Plus-Value PDF export + remove watermark

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     </title>
     <meta
       name="description"
-      content="🏆 Calculateurs financiers gratuits 2025 : frais de notaire, simulateur prêt immobilier, plus-value, charges copropriété. Outils officiels mis à jour."
+      content="🏆 TOP 5 Calculateurs 2025 : Frais de Notaire, Financement Personnel, Plus-Value Immobilière & Crypto. Simulateurs gratuits conformes aux barèmes officiels."
     />
     <meta
       name="keywords"
@@ -279,16 +279,16 @@
       <section class="mb-12">
         <div class="max-w-3xl mx-auto text-center">
           <h1 class="text-4xl font-bold text-gray-900 mb-6">
-            🚀 Calculateurs Financiers Gratuits 2025
+            🚀 TOP 5 Calculateurs Financiers Gratuits 2025
           </h1>
           <p class="text-lg text-gray-600 leading-relaxed mb-8">
-            <strong>Calculateurs officiels gratuits</strong> pour tous vos
-            besoins financiers ! 💡 <strong>Frais de notaire</strong>,
-            <strong>simulateur prêt immobilier</strong>,
-            <strong>plus-value immobilière</strong> et
-            <strong>charges de copropriété</strong> : tous les outils
-            indispensables réunis. ✨ Calculs précis en temps réel, conformes
-            aux <strong>barèmes officiels 2025</strong>, sans inscription.
+            <strong>Les calculateurs les plus utilisés</strong> pour vos projets
+            financiers ! 💡 <strong>Frais de notaire</strong>,
+            <strong>financement personnel</strong>,
+            <strong>plus-value immobilière & crypto</strong>,
+            <strong>simulateur prêt immobilier</strong> : tous les outils
+            indispensables. ✨ Calculs précis en temps réel, conformes aux
+            <strong>barèmes officiels 2025</strong>, sans inscription.
           </p>
           <div class="grid md:grid-cols-2 gap-6 text-left">
             <div class="bg-blue-50 p-4 rounded-lg">
@@ -325,14 +325,14 @@
         </div>
       </section>
 
-      <!-- Grid des calculateurs -->
+      <!-- Grid des calculateurs - TOP 5 -->
       <section
         id="calculateurs"
         class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12"
       >
-        <!-- Frais de notaire -->
+        <!-- #1 Frais de notaire -->
         <div
-          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow"
+          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow border-2 border-blue-500"
         >
           <div class="mb-4">
             <div
@@ -356,14 +356,164 @@
               💰 Frais de notaire 2025
             </h3>
             <p class="text-gray-600 mt-2">
-              Votre projet immobilier mérite la transparence ! Simulez en
-              quelques clics tous vos frais d'acquisition selon les barèmes
-              officiels 2025.
+              Le calculateur N°1 ! Simulez en quelques clics tous vos frais
+              d'acquisition immobilière selon les barèmes officiels 2025.
+              Résultats précis et instantanés.
             </p>
           </div>
           <a href="pages/notaire.html" class="inline-block calculator-button"
             >Calculer</a
           >
+        </div>
+
+        <!-- #2 Financement personnel -->
+        <div
+          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow border-2 border-purple-500"
+        >
+          <div class="mb-4">
+            <div
+              class="w-12 h-12 bg-purple-100 rounded-lg flex items-center justify-center mb-3"
+            >
+              <svg
+                class="w-6 h-6 text-purple-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="text-xl font-semibold text-gray-900">
+              💳 Financement personnel
+            </h3>
+            <p class="text-gray-600 mt-2">
+              Voiture, travaux, équipements : calculez votre capacité de
+              financement avec apport, mensualités et ratio d'endettement.
+              Simulation complète.
+            </p>
+          </div>
+          <a
+            href="pages/financement.html"
+            class="inline-block calculator-button"
+          >
+            Calculer
+          </a>
+        </div>
+
+        <!-- #3 Plus-value immobilière -->
+        <div
+          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow border-2 border-yellow-500"
+        >
+          <div class="mb-4">
+            <div
+              class="w-12 h-12 bg-yellow-100 rounded-lg flex items-center justify-center mb-3"
+            >
+              <svg
+                class="w-6 h-6 text-yellow-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="text-xl font-semibold text-gray-900">
+              📈 Plus-value immobilière
+            </h3>
+            <p class="text-gray-600 mt-2">
+              Calculez l'impôt sur votre plus-value immobilière avec abattements
+              et exonérations selon la durée de détention. Barèmes 2025
+              officiels.
+            </p>
+          </div>
+          <a href="pages/plusvalue.html" class="inline-block calculator-button">
+            Calculer
+          </a>
+        </div>
+
+        <!-- #4 Plus-value crypto & bourse -->
+        <div
+          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow border-2 border-orange-500"
+        >
+          <div class="mb-4">
+            <div
+              class="w-12 h-12 bg-orange-100 rounded-lg flex items-center justify-center mb-3"
+            >
+              <svg
+                class="w-6 h-6 text-orange-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="text-xl font-semibold text-gray-900">
+              🚀 Plus-Value Crypto & Bourse
+            </h3>
+            <p class="text-gray-600 mt-2">
+              Calculez vos gains crypto et actions après impôts. Bitcoin,
+              Ethereum, CAC 40. Flat tax 30% et abattements selon durée de
+              détention.
+            </p>
+          </div>
+          <a
+            href="pages/crypto-bourse.html"
+            class="inline-block calculator-button"
+          >
+            Calculer
+          </a>
+        </div>
+
+        <!-- #5 Simulateur prêt immobilier -->
+        <div
+          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow border-2 border-green-500"
+        >
+          <div class="mb-4">
+            <div
+              class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center mb-3"
+            >
+              <svg
+                class="w-6 h-6 text-green-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="text-xl font-semibold text-gray-900">
+              🏦 Simulateur prêt immobilier
+            </h3>
+            <p class="text-gray-600 mt-2">
+              Capacité d'emprunt, mensualités, assurance... Simulez votre
+              financement immobilier avec tous les détails ! Simulation complète
+              et précise.
+            </p>
+          </div>
+          <a href="pages/pret.html" class="inline-block calculator-button">
+            Simuler
+          </a>
         </div>
 
         <!-- Indemnités kilométriques -->
@@ -403,7 +553,14 @@
             >Calculer</a
           >
         </div>
+      </section>
 
+      <!-- Section calculateurs supplémentaires (cachée par défaut) -->
+      <section
+        id="more-calculators"
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12"
+        style="display: none"
+      >
         <!-- Jours fériés et ponts -->
         <div
           class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow"
@@ -512,89 +669,6 @@
             >Calculer</a
           >
         </div>
-      </section>
-
-      <!-- Section calculateurs supplémentaires (cachée par défaut) -->
-      <section
-        id="more-calculators"
-        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12"
-        style="display: none"
-      >
-        <!-- Simulateur prêt immobilier -->
-        <div
-          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow"
-        >
-          <div class="mb-4">
-            <div
-              class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center mb-3"
-            >
-              <svg
-                class="w-6 h-6 text-green-600"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"
-                ></path>
-              </svg>
-            </div>
-            <h3 class="text-xl font-semibold text-gray-900">
-              🏦 Simulateur prêt immobilier
-            </h3>
-            <p class="text-gray-600 mt-2">
-              Capacité d'emprunt, mensualités, assurance... Simulez votre
-              financement immobilier avec tous les détails !
-            </p>
-            <p class="text-xs text-green-600 mt-1 font-medium">
-              ✨ Nouveau ! Simulation complète
-            </p>
-          </div>
-          <a href="pages/pret.html" class="inline-block calculator-button">
-            Simuler
-          </a>
-        </div>
-
-        <!-- Calculateur plus-value immobilière -->
-        <div
-          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow"
-        >
-          <div class="mb-4">
-            <div
-              class="w-12 h-12 bg-yellow-100 rounded-lg flex items-center justify-center mb-3"
-            >
-              <svg
-                class="w-6 h-6 text-yellow-600"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"
-                ></path>
-              </svg>
-            </div>
-            <h3 class="text-xl font-semibold text-gray-900">
-              📈 Plus-value immobilière
-            </h3>
-            <p class="text-gray-600 mt-2">
-              Calculez l'impôt sur votre plus-value immobilière avec abattements
-              et exonérations selon la durée de détention.
-            </p>
-            <p class="text-xs text-yellow-600 mt-1 font-medium">
-              ✨ Nouveau ! Calcul avec abattements
-            </p>
-          </div>
-          <a href="pages/plusvalue.html" class="inline-block calculator-button">
-            Calculer
-          </a>
-        </div>
 
         <!-- Estimateur charges copropriété -->
         <div
@@ -625,87 +699,8 @@
               Estimez vos charges courantes et exceptionnelles selon la taille,
               l'âge et les équipements de votre copropriété.
             </p>
-            <p class="text-xs text-red-600 mt-1 font-medium">
-              ✨ Nouveau ! Estimation détaillée
-            </p>
           </div>
           <a href="pages/charges.html" class="inline-block calculator-button">
-            Calculer
-          </a>
-        </div>
-
-        <!-- Calculateur financement personnel -->
-        <div
-          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow"
-        >
-          <div class="mb-4">
-            <div
-              class="w-12 h-12 bg-purple-100 rounded-lg flex items-center justify-center mb-3"
-            >
-              <svg
-                class="w-6 h-6 text-purple-600"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"
-                ></path>
-              </svg>
-            </div>
-            <h3 class="text-xl font-semibold text-gray-900">
-              💳 Financement personnel
-            </h3>
-            <p class="text-gray-600 mt-2">
-              Voiture, travaux, équipements : calculez votre capacité de financement 
-              avec apport, mensualités et ratio d'endettement.
-            </p>
-            <p class="text-xs text-purple-600 mt-1 font-medium">
-              🆕 Nouveau ! Tous projets
-            </p>
-          </div>
-          <a href="pages/financement.html" class="inline-block calculator-button">
-            Calculer
-          </a>
-        </div>
-
-        <!-- Calculateur plus-value crypto & bourse -->
-        <div
-          class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow"
-        >
-          <div class="mb-4">
-            <div
-              class="w-12 h-12 bg-orange-100 rounded-lg flex items-center justify-center mb-3"
-            >
-              <svg
-                class="w-6 h-6 text-orange-600"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"
-                ></path>
-              </svg>
-            </div>
-            <h3 class="text-xl font-semibold text-gray-900">
-              🚀 Plus-Value Crypto & Bourse
-            </h3>
-            <p class="text-gray-600 mt-2">
-              Calculez vos gains crypto et actions après impôts. Bitcoin, Ethereum, 
-              CAC 40. Flat tax 30% et abattements selon durée de détention.
-            </p>
-            <p class="text-xs text-orange-600 mt-1 font-medium">
-              🆕 Nouveau ! Fiscalité 2025
-            </p>
-          </div>
-          <a href="pages/crypto-bourse.html" class="inline-block calculator-button">
             Calculer
           </a>
         </div>
