--- a/src/pages/charges.html
+++ b/src/pages/charges.html
@@ -835,5 +835,8 @@
             .scrollIntoView({ behavior: "smooth" });
         });
     </script>
+
+    <!-- Auto-initialisation des exports PDF/CSV -->
+    <script type="module" src="../utils/autoExportInit.js"></script>
   </body>
 </html>
