--- a/src/pages/ik.html
+++ b/src/pages/ik.html
@@ -279,5 +279,8 @@
 
       new CalculatorFrame("ik-calculator", ikConfig);
     </script>
+
+    <!-- Auto-initialisation des exports PDF/CSV -->
+    <script type="module" src="../utils/autoExportInit.js"></script>
   </body>
 </html>
