--- a/src/pages/pret.html
+++ b/src/pages/pret.html
@@ -648,5 +648,8 @@
       // Initialisation du calculateur
       new CalculatorFrame("calculator-container", pretConfig);
     </script>
+    
+    <!-- Auto-initialisation des exports PDF/CSV -->
+    <script type="module" src="../utils/autoExportInit.js"></script>
   </body>
 </html>
