--- a/src/pages/taxe.html
+++ b/src/pages/taxe.html
@@ -318,5 +318,8 @@
 
       new CalculatorFrame("taxe-calculator", taxeConfig);
     </script>
+
+    <!-- Auto-initialisation des exports PDF/CSV -->
+    <script type="module" src="../utils/autoExportInit.js"></script>
   </body>
 </html>
