--- a/src/pages/travail.html
+++ b/src/pages/travail.html
@@ -347,5 +347,8 @@
 
       new CalculatorFrame("travail-calculator", travailConfig);
     </script>
+
+    <!-- Auto-initialisation des exports PDF/CSV -->
+    <script type="module" src="../utils/autoExportInit.js"></script>
   </body>
 </html>
