--- a/src/pages/ponts.html
+++ b/src/pages/ponts.html
@@ -207,5 +207,8 @@
         renderCalendar();
       });
     </script>
+
+    <!-- Auto-initialisation des exports PDF/CSV -->
+    <script type="module" src="../utils/autoExportInit.js"></script>
   </body>
 </html>
