feat: Export PDF avec jsPDF+html2canvas (npm) - Capture uniquement résultats - Bouton activé/désactivé selon état calcul

--- a/src/pages/financement.html
+++ b/src/pages/financement.html
@@ -861,6 +861,7 @@
     </script>
 
     <!-- Auto-initialisation des exports PDF/CSV -->
+    <script type="module" src="../utils/pdfExport.js"></script>
     <script type="module" src="../utils/autoExportInit.js"></script>
   </body>
 </html>
