--- a/src/pages/pret.html
+++ b/src/pages/pret.html
@@ -650,6 +650,7 @@
     </script>
     
     <!-- Auto-initialisation des exports PDF/CSV -->
+    <script type="module" src="../utils/pdfExport.js"></script>
     <script type="module" src="../utils/autoExportInit.js"></script>
   </body>
 </html>
