fix: Enable PDF export button automatically for Ponts calendar page

--- a/src/pages/crypto-bourse.html
+++ b/src/pages/crypto-bourse.html
@@ -452,31 +452,7 @@
 
         <!-- Résultats -->
         <div id="results" class="hidden mt-8"></div>
-
-        <!-- Boutons d'export (affichés seulement quand il y a des résultats) -->
-        <div id="export-buttons" class="hidden mt-6">
-          <div class="flex flex-wrap gap-4 justify-center">
-            <button
-              id="pdf-export-btn"
-              class="bg-red-600 hover:bg-red-700 text-white font-semibold py-3 px-6 rounded-lg transition-all duration-200 flex items-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed"
-            >
-              <svg
-                class="w-5 h-5"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
-                ></path>
-              </svg>
-              <span>📄 Exporter en PDF</span>
-            </button>
-          </div>
-        </div>
+        <!-- Export buttons will be dynamically created by autoExportInit.js -->
       </div>
 
       <!-- FAQ Schema.org -->
@@ -992,8 +968,8 @@
             .scrollIntoView({ behavior: "smooth" });
         });
 
-      // Fonction pour l'export PDF
-      async function exportToPDF() {
+      // DÉSACTIVÉ : Fonction locale remplacée par pdfExport.js (canvas universel)
+      /* async function exportToPDF() {
         const data = window.cryptoBourseData;
         if (!data) {
           alert(
@@ -1251,15 +1227,17 @@
             button.innerHTML = originalContent;
           }, 3000);
         }
-      }
+      } */ // FIN fonction désactivée
 
-      // Event listener pour le bouton PDF
+      // Event listener désactivé - géré par autoExportInit.js
+      /*
       document.addEventListener("DOMContentLoaded", () => {
         const pdfButton = document.getElementById("pdf-export-btn");
         if (pdfButton) {
           pdfButton.addEventListener("click", exportToPDF);
         }
       });
+      */
     </script>
 
     <!-- Auto-initialisation des exports PDF/CSV -->
